# unifi-mcp

./: CHANGELOG.md  CLAUDE.md  README.md  gemini-extension.json  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
tests/: test_server.py  test_unified_tool.py
unifi_mcp/: client.py  formatters.py  server.py
unifi_mcp/models/: enums.py  params.py
unifi_mcp/services/: base.py  monitoring_service.py  network_service.py  unifi_service.py
