[project]
name = "unifi-mcp"
version = "2.0.0"
description = "UniFi MCP servers for cloud and local controller management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "fastmcp>=2.13.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "unifi-controller-api>=0.3.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "inline-snapshot>=0.13.0",
    "ruff>=0.12.7",
    "ty>=0.0.1a6",
]

[project.scripts]
unifi-mcp = "unifi_mcp.main:cli"
unifi-local-mcp = "unifi_mcp.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["unifi_mcp*"]
exclude = ["logs*", "docs*"]

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.coverage.run]
source = ["unifi_mcp"]
branch = true
data_file = ".cache/.coverage"
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
skip_covered = true
show_missing = true

[tool.coverage.html]
directory = ".cache/htmlcov"

[tool.mypy]
cache_dir = ".cache/mypy"

[tool.ty]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=unifi_mcp",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:.cache/htmlcov",
    "--cov-fail-under=25",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
cache_dir = ".cache/pytest"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests requiring an external UniFi controller",
    "client_process: marks tests that spawn separate client processes",
    "slow: marks slow-running tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
